migra front a svelte, se modifica el backend para que funione la migracion